VoiceOver does not speak "visited" link status
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox77 | --- | verified |
People
(Reporter: morgan, Assigned: morgan)
References
Details
(Whiteboard: [mac2020_1])
Attachments
(1 file)
STR:
- Launch FF with VO
- Navigate to: data:text/html,<div id="example-4"><a href="">You visited this link.</a></div>
- Cursor to link
Expected:
VO says: "visited, link, You visited this link."
Actual:
VO says: "link, You visited this link."
Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
Comment 3•5 years ago
|
||
bugherder |
Updated•5 years ago
|
Comment 4•5 years ago
|
||
Hm, for some reason the link in questions does not appear in Fx as it was visited so VO still reads it as link, You visited this link.
do you know something about this?
Assignee | ||
Comment 5•5 years ago
|
||
(In reply to Bogdan Maris [:bogdan_maris], Release Desktop QA from comment #4)
Hm, for some reason the link in questions does not appear in Fx as it was visited so VO still reads it as
link, You visited this link.
do you know something about this?
Oops sorry, that example turned out to be profile-specific. You can reproduce with this though:
- Navigate to https://google.com
- Navigate to data:text/html,<a href="https://www.google.com/">I am a visited link</a>
Expected: VO reports visited link
Comment 6•5 years ago
|
||
(In reply to Morgan Reschenberg [:morgan] from comment #5)
(In reply to Bogdan Maris [:bogdan_maris], Release Desktop QA from comment #4)
Hm, for some reason the link in questions does not appear in Fx as it was visited so VO still reads it as
link, You visited this link.
do you know something about this?Oops sorry, that example turned out to be profile-specific. You can reproduce with this though:
- Navigate to https://google.com
- Navigate to data:text/html,<a href="https://www.google.com/">I am a visited link</a>
Expected: VO reports visited link
Thanks Morgan for the extra info.
Using both old Nightly, latest Nightly 78.0a1 and Beta 77.0b4 I saw that after focusing on the web content with VO and doing Control-Option-Shift-Down to focus on the hyperlink, VO will say In visited, link, I am a visited link I am a visited link, clickable In visited, link, I am a visited link I am a visited link, clickable
If I click on left, right arrow I VO will say I am a visited link, clickable
.
Not sure if the above is expected since both Chrome and Safari will say visited, link, I am a visited link
.
Assignee | ||
Comment 7•5 years ago
|
||
I think this is a separate issue; if you run this:
data:text/html,this is some other text<a href="https://www.google.com/">I am a visited link</a>
, the first "this is some other text" gets the same repetition applied, while the visited link stuff matches Safari. I'll file a bug for the repetition issue, thanks for noting that :)
Comment 8•5 years ago
|
||
(In reply to Morgan Reschenberg [:morgan] from comment #7)
I think this is a separate issue; if you run this:
data:text/html,this is some other text<a href="https://www.google.com/">I am a visited link</a>
, the first "this is some other text" gets the same repetition applied, while the visited link stuff matches Safari. I'll file a bug for the repetition issue, thanks for noting that :)
No worries. I will go ahead and close this bug since the visited status is now announced by VO.
Description
•