Bug 1624964: Add visited attribute to links, state caching for TRAVERSED. r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D70095

--HG--
extra : moz-landing-system : lando